# documentor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_unique_source_constraint.py  003_add_chunk_indexes.py
docs/: api-reference.md  architecture.md  flows.md
docs/decisions/: 001-dependencies.md  002-hexagonal-architecture.md  003-rag-strategy.md  004-llm-provider-abstraction.md
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  documents.ts  health.ts  ingest.ts  questions.ts  types.ts
frontend/src/hooks/: use-ask-question.ts  use-documents.ts  use-health.ts  use-ingest-file.ts  use-ingest-url.ts
frontend/src/pages/: ask-page.tsx  documents-page.tsx  ingest-page.tsx
src/documentor/application/: dtos.py
src/documentor/domain/: __init__.py  exceptions.py  unit_of_work.py
src/documentor/infrastructure/: config.py  database.py  observability.py
tests/e2e/api/: conftest.py  test_documents_endpoint.py  test_health_endpoint.py  test_questions_endpoint.py
tests/integration/: test_ingest_documentation.py
tests/integration/persistence/: conftest.py  test_pg_chunk_repository.py  test_pg_document_repository.py
tests/unit/adapters/: test_file_validation.py
tests/unit/application/: test_ask_question.py  test_ingest_documentation.py  test_list_documents.py
tests/unit/domain/: test_answer.py  test_chunk.py  test_conversation.py  test_document.py  (+2 more)
(+40 files in other folders)
