[project]
name = "documentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.79.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.7",
    "httpx>=0.28.1",
    "langfuse>=3.14.1",
    "openai>=2.20.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.27.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "uuid-utils>=0.14.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "testcontainers>=4.14.1",
]
